# 1sudoku1-fun

./: README.md
backend/sudoku-fun/: Cargo.toml
backend/sudoku-fun/src/: main.rs
backend/sudoku-fun/src/database/: helpers.rs  mod.rs  mongo.rs  p_key.json  p_key.rs  queries.rs  serde_helpers.rs  session.rs
backend/sudoku-fun/src/websockets/: games.rs  handler.rs  message_handler.rs  messages.rs  mod.rs  requests.rs  state.rs  time_control.rs
front-end/sudoku-fun/: index.html  package-lock.json  package.json  rsw.toml  tsconfig.json  vite.config.ts
front-end/sudoku-fun/.rsw/: rsw.crates
front-end/sudoku-fun/src/: App.vue  main.ts  storeTypes.ts  style.css
front-end/sudoku-fun/src/assets/homeSvg/: test.json
front-end/sudoku-fun/src/components/: CreateGameModal.vue  GameBoard.vue  GameButtons.vue  GameClock.vue  GameFinishedModal.vue  GameNumbers.vue  GamePlayers.vue  Header.vue  HomeIcon.vue
front-end/sudoku-fun/src/pages/: Home.vue  LiveGame.vue  NewGame.vue
front-end/sudoku-fun/src/plugins/: clock.ts  getBackend.ts  keyboardMap.ts  sudokuItems.ts  webSockets.ts
front-end/sudoku-fun/src/router/: index.ts
front-end/sudoku-fun/src/store/: backgroundSvg.ts  createGameStore.ts  sudokuStore.ts
