[package]
name = "sudoku-fun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudoku = { git = "https://github.com/Emerentius/sudoku", branch = "master"}
idgenerator = "2.0.0"
sha2 = "0.10.1"
hex-literal = "0.2.1"
base64 = "0.13.0"
rand = "0.8.4"
url = "2.2.2"
bson = { version = "2.1.0" }
querystring = "1.1.0"
serde_json = "1.0.81"
reqwest = { version = "0.11.10", features = ["json"] }
axum-macros = "0.2.2"
hyper = "0.14"
json_value_merge = "1.1.2"
chrono = "0.4.19"
axum = { version = "0.5.13", features = ["ws","headers", "json"] }
futures = "0.3.0"
async-session = "3.0.0"
tower = { version = "0.4", features = ["util"] }
serde = { version = "1.0.145", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["cors"] }
mongodb = {version = "2.3.0", default-features = false, features = ["tokio-runtime"]}
redis = { version = "0.21.5", features = ["aio", "connection-manager", "tokio-comp"] }
